--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html np-app='album'>
+<html np-app='AlbumReviewApp'>
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css"/>
     <title>My Music App</title>
   </head>
-  <body ng-controller='mainController as ctrl'>
+  <body ng-controller='MainController as ctrl'>
     <header>Review an Album</header>
        <div class="container">
          <main>
            <div ng-repeat="album in ctrl.albums" class="album">
              <h3>{{ album.artist }}</h3>
              <h2>{{ album.title }}</h2>
-             <img ng-src={{ album.img }}>
+             <img src="{{ album.img }}"></img>
            </div>
          </main>
          <nav>
@@ -27,8 +27,8 @@
              <input class="submit" type="submit"/>
            </form>
          </nav>
-         <aside>...</aside>
+         <aside></aside>
        </div>
-       <footer>...</footer>
+       <footer></footer>
       </body>
 </html>
