--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html np-app='AlbumReviewApp'>
+<html ng-app='AlbumReviewApp'>
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css"/>
     <title>My Music App</title>
   </head>
-  <body ng-controller='MainController as ctrl'>
+  <body ng-controller='mainController as ctrl'>
     <header>Review an Album</header>
+    {{ctrl.message}}
        <div class="container">
          <main>
            <div ng-repeat="album in ctrl.albums" class="album">
