standardized size of album art

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
            <div ng-repeat="album in ctrl.albums" class="album">
              <h3>{{ album.artist }}</h3>
              <h2>{{ album.title }}</h2>
-             <img src="{{ album.img }}"></img>
+             <img class="album-art" src="{{ album.img }}"></img>
            </div>
          </main>
          <nav>
