--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html ng-app='AlbumReviewApp'>
-  <head>
-    <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <script type="text/javascript" src="/app.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"/>
-    <title>My Music App</title>
-  </head>
-  <body ng-controller='mainController as ctrl'>
-    <header>Review an Album</header>
-    {{ctrl.message}}
-       <div class="container">
-         <main>
-           <div ng-repeat="album in ctrl.albums" class="album">
-             <h3>{{ album.artist }}</h3>
-             <h2>{{ album.title }}</h2>
-             <img class="album-art" src="{{ album.img }}"></img>
-         </main>
-         <nav>
-           <h4>Add an Album Review</h4>
-           <form ng-submit="ctrl.processForm()">
-             <input type="text" ng-model="ctrl.formdata.title"placeholder="title"/>
-             <input type="text" ng-model="ctrl.formdata.author" placeholder="author"/>
-             <input type="text" ng-model="ctrl.formdata.content" placeholder="content"/><br/>
-             <input class="submit" type="submit"/>
-           </form>
-         </nav>
-         <aside></aside>
-       </div>
-       <footer></footer>
-      </body>
+<html ng-app="AlbumReviewApp">
+
+<head>
+  <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+  <script type="text/javascript" src="/app.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <title>My Music App</title>
+</head>
+
+<body ng-controller="mainController as ctrl">
+  <header>Review an Album</header>
+  {{ctrl.message}}
+  <main>
+    <div ng-repeat="album in ctrl.albums" class="album">
+      <h3>{{ album.artist }}</h3>
+      <h2>{{ album.title }}</h2>
+      <a href="http://localhost:3000/albums/{{album.id}}">
+      <img class="album-art" src="{{ album.img }}"></img></a>
+  </main>
+  <nav>
+    <h4>Add an Album Review</h4>
+    <form ng-submit="ctrl.processForm()">
+      <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
+      <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
+      <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
+      <input class="submit" type="submit" />
+    </form>
+  </nav>
+  <aside></aside>
+  </div>
+  <footer></footer>
+</body>
+
 </html>
