--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,20 @@
     <div ng-repeat="album in ctrl.albums" class="album">
       <h3>{{ album.artist }}</h3>
       <h2>{{ album.title }}</h2>
-      <a href="http://localhost:3000/albums/{{album.id}}">
-      <img class="album-art" src="{{ album.img }}"></img></a>
+      <img ng-click="ctrl.getAlbum(album)" class="album-art" src="{{ album.img }}"></img>
+
+      <div ng-hide="ctrl.toggle">
+          <!-- make a view of one here -->
+          <h2>Reviews</h2>
+          <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
+          <div class="">
+            <ul>
+              <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
+              <li><strong>Author: </strong><span>{{ album.reviews[0].author }}</span></li>
+              <li><strong>Content: </strong> <span>{{ album.reviews[0].content }}</span></li>
+            </ul>
+          </div>
+        </div>
   </main>
   <nav>
     <h4>Add an Album Review</h4>
