--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
 
 <body ng-controller="mainController as ctrl">
   <header>Review an Album</header>
-  {{ctrl.message}}
   <main>
     <div ng-repeat="album in ctrl.albums" class="album">
       <h3>{{ album.artist }}</h3>
@@ -23,24 +22,31 @@
           <!-- make a view of one here -->
           <h2>Reviews</h2>
           <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
-          <div class="">
+          <div>
             <ul>
               <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
-              <li><strong>Author: </strong><span>{{ album.reviews[0].author }}</span></li>
-              <li><strong>Content: </strong> <span>{{ album.reviews[0].content }}</span></li>
+              <li><strong>Author: </strong><span>{{ album.reviews.author }}</span></li>
+              <li><strong>Content: </strong> <span>{{ album.reviews.content }}</span></li>
             </ul>
+            <h4>Add an Album Review</h4>
+            <form ng-submit="ctrl.processForm()">
+              <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
+              <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
+              <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
+              <input class="submit" type="submit" />
+            </form>
           </div>
         </div>
   </main>
-  <nav>
+  <!-- <nav ng-click="ctrl.toggleView()">Click Album to close reviews>
     <h4>Add an Album Review</h4>
     <form ng-submit="ctrl.processForm()">
       <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
       <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
       <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
       <input class="submit" type="submit" />
-    </form>
-  </nav>
+    </form> -->
+
   <aside></aside>
   </div>
   <footer></footer>
