moved reviews to the right of the album

--- a/public/index.html
+++ b/public/index.html
@@ -16,37 +16,28 @@
     <div ng-repeat="album in ctrl.albums" class="album">
       <h3>{{ album.artist }}</h3>
       <h2>{{ album.title }}</h2>
+      <div class="container1">
       <img ng-click="ctrl.getAlbum(album)" class="album-art" src="{{ album.img }}"></img>
-
-      <div ng-hide="ctrl.toggle">
-          <!-- make a view of one here -->
+      <div class="reviews" ng-hide="ctrl.toggle">
           <h2>Reviews</h2>
           <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
-          <div>
             <ul>
               <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
               <li><strong>Author: </strong><span>{{ album.reviews.author }}</span></li>
               <li><strong>Content: </strong> <span>{{ album.reviews.content }}</span></li>
             </ul>
+            </div>
+            <div ng-click="ctrl.toggleView()" class="form">
             <h4>Add an Album Review</h4>
+
             <form ng-submit="ctrl.processForm()">
               <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
               <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
               <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
               <input class="submit" type="submit" />
             </form>
-          </div>
         </div>
   </main>
-  <!-- <nav ng-click="ctrl.toggleView()">Click Album to close reviews>
-    <h4>Add an Album Review</h4>
-    <form ng-submit="ctrl.processForm()">
-      <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
-      <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
-      <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
-      <input class="submit" type="submit" />
-    </form> -->
-
   <aside></aside>
   </div>
   <footer></footer>
