Form now adds reviews to one album

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
           <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
             <ul>
               <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
-              <li><strong>Author: </strong><span>{{ album.reviews.author }}</span></li>
-              <li><strong>Content: </strong> <span>{{ album.reviews.content }}</span></li>
+              <li><strong>Author: </strong><span>{{ album.reviews[0].author }}</span></li>
+              <li><strong>Content: </strong> <span>{{ album.reviews[0].content }}</span></li>
             </ul>
             </div>
   </main>
