--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,11 @@
 
 <body ng-controller="mainController as ctrl">
   <header>Review an Album</header>
-  <main>
     <div ng-repeat="album in ctrl.albums" class="album">
       <h3>{{ album.artist }}</h3>
       <h2>{{ album.title }}</h2>
       <div class="container1">
-      <img ng-click="ctrl.getAlbum(album)" class="album-art" src="{{ album.img }}"></img>
+      <img ng-click="ctrl.getAlbum(album)" class="album-art" src="{{ album.img }}"/>
       <div ng-click="ctrl.toggleView()" class="form">
       <h4>Add an Album Review</h4>
 
@@ -32,12 +31,15 @@
           <h2>Reviews</h2>
           <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
             <ul>
-              <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
+              <li><strong>Title: </strong><span>{{ album.reviews[0].id }}</span></li>
               <li><strong>Author: </strong><span>{{ album.reviews[0].author }}</span></li>
               <li><strong>Content: </strong> <span>{{ album.reviews[0].content }}</span></li>
             </ul>
+            <form ng-submit="ctrl.deleteReview()">
+  <button type="submit" ng-click="ctrl.toggleView()">DELETE</button>
+</form>
             </div>
-  </main>
+          </div>
   <aside></aside>
   </div>
   <footer></footer>
