changed title id back to title on reviews

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           <h2>Reviews</h2>
           <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
             <ul>
-              <li><strong>Title: </strong><span>{{ album.reviews[0].id }}</span></li>
+              <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
               <li><strong>Author: </strong><span>{{ album.reviews[0].author }}</span></li>
               <li><strong>Content: </strong> <span>{{ album.reviews[0].content }}</span></li>
             </ul>
