--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,12 @@
         <form ng-submit="ctrl.deleteReview()">
           <button type="submit">DELETE</button>
         </form>
+        <form ng-submit="ctrl.editReview()">
+          <input type="text" ng-model="ctrl.formdata.title" placeholder="{{album.reviews[0].title}}" />
+          <input type="text" ng-model="ctrl.formdata.author" placeholder="{{album.reviews[0].author}}" />
+          <input type="text" ng-model="ctrl.formdata.content" placeholder="{{album.reviews[0].content}}" /><br/>
+          <input class="submit" type="submit" />
+        </form>
       </div>
     </div>
     <aside></aside>
