--- a/public/index.html
+++ b/public/index.html
@@ -6,43 +6,42 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   <script type="text/javascript" src="/app.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-  <title>My Music App</title>
+  <title>review an album</title>
 </head>
 
 <body ng-controller="mainController as ctrl">
-  <header>Review an Album</header>
+  <header>review an album</header>
   <div ng-repeat="album in ctrl.albums" class="album">
     <h3>{{ album.artist }}</h3>
     <h2>{{ album.title }}</h2>
     <div class="container1">
       <img ng-click="ctrl.getAlbum(album)" class="album-art" src="{{ album.img }}" />
       <div ng-click="ctrl.toggleView()" class="form">
-        <h4>Add an Album Review</h4>
+        <h4>Add a review</h4>
 
         <form ng-submit="ctrl.processForm()">
           <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
           <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
           <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
-          <input class="submit" type="submit" />
+          <input class="submit" type="submit" value="Submit review"/>
         </form>
       </div>
       <div class="reviews" ng-hide="ctrl.toggle">
-        <h2>Reviews</h2>
-        <h3 ng-click="ctrl.toggleView()">Click Album to close reviews</h3>
         <ul>
           <li><strong>Title: </strong><span>{{ album.reviews[0].title }}</span></li>
           <li><strong>Author: </strong><span>{{ album.reviews[0].author }}</span></li>
           <li><strong>Content: </strong> <span>{{ album.reviews[0].content }}</span></li>
         </ul>
         <form ng-submit="ctrl.deleteReview()">
-          <button type="submit">DELETE</button>
+          <button class="submit" type="submit">Delete review</button>
         </form>
         <form ng-submit="ctrl.editReview()">
           <input type="text" ng-model="ctrl.formdata.title" placeholder="{{album.reviews[0].title}}" />
           <input type="text" ng-model="ctrl.formdata.author" placeholder="{{album.reviews[0].author}}" />
           <input type="text" ng-model="ctrl.formdata.content" placeholder="{{album.reviews[0].content}}" /><br/>
-          <input class="submit" type="submit" />
+          <input class="submit" type="submit" value="Edit review"/>
         </form>
       </div>
     </div>
