--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,11 @@
       <div ng-click="ctrl.toggleView()" class="form">
         <h4>Add a review</h4>
 
-        <form ng-submit="ctrl.processForm()">
-          <input type="text" ng-model="ctrl.formdata.title" placeholder="title" />
-          <input type="text" ng-model="ctrl.formdata.author" placeholder="author" />
-          <input type="text" ng-model="ctrl.formdata.content" placeholder="content" /><br/>
+        <form ng-submit="ctrl.processForm(album.id)">
+          <!-- <input type="hidden" ng-model="{{ $index }}"> -->
+          <input type="text" ng-model="ctrl.formdata.form[album.id].title" placeholder="title" />
+          <input type="text" ng-model="ctrl.formdata.form[album.id].author" placeholder="author" />
+          <input type="text" ng-model="ctrl.formdata.form[album.id].content" placeholder="content" /><br/>
           <input class="submit" type="submit" value="Submit review"/>
         </form>
       </div>
