--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,21 @@
     <input ng-model="ctrl.createForm.title" type="text" placeholder="Title">
     <input ng-model="ctrl.createForm.author" type="text" placeholder="Author">
     <input ng-model="ctrl.createForm.content" type="text" placeholder="Content">
-    <input id="form" class="button" type="submit" value="Submit review">
+    <input class="button" type="submit" value="Submit review">
+  </form>
+
+  <form ng-submit="ctrl.editReview()" ng-if="ctrl.showEdit">
+    <input ng-model="ctrl.editForm.title" type="text" placeholder="Title">
+    <input ng-model="ctrl.editForm.author" type="text" placeholder="Author">
+    <input ng-model="ctrl.editForm.content" type="text" placeholder="Content">
+    <input class="button" type="submit" value="Edit review">
   </form>
 
   <div ng-repeat="review in ctrl.album.reviews" ng-if="ctrl.showOne">
     <p>{{ review.title }}</p>
     <p>{{ review.author }}</p>
     <p>{{ review.content }}</p>
+    <button class="button" ng-click="ctrl.showEdit = !ctrl.showEdit">Edit review</button>
     <p>--------------------</p>
   </div>
 
